WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240180
[macOS] HTTP traffic is not filtered in the parental controls filter
https://bugs.webkit.org/show_bug.cgi?id=240180
Summary
[macOS] HTTP traffic is not filtered in the parental controls filter
Per Arne Vollan
Reported
2022-05-06 12:46:46 PDT
Traditionally, we have not filtered HTTP in the parental controls filter on macOS, since other parts of the system has taken care of this. This appears to have changed now, and WebKit should also filter HTTP in addition to HTTPS.
Attachments
Patch
(1.58 KB, patch)
2022-05-06 12:50 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.85 KB, patch)
2022-05-09 09:44 PDT
,
Per Arne Vollan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.85 KB, patch)
2022-05-09 10:02 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-06 12:47:05 PDT
<
rdar://problem/92875540
>
Per Arne Vollan
Comment 2
2022-05-06 12:50:24 PDT
Created
attachment 458969
[details]
Patch
Geoffrey Garen
Comment 3
2022-05-06 14:07:27 PDT
Comment on
attachment 458969
[details]
Patch r=me
Per Arne Vollan
Comment 4
2022-05-06 15:01:19 PDT
Comment on
attachment 458969
[details]
Patch Thanks for reviewing!
EWS
Comment 5
2022-05-06 16:11:54 PDT
Committed
r293929
(
250376@main
): <
https://commits.webkit.org/250376@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458969
[details]
.
Alexey Proskuryakov
Comment 6
2022-05-06 19:15:41 PDT
Comment on
attachment 458969
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=458969&action=review
> Source/WebCore/ChangeLog:10 > + has taken care of this. This appears to have changed now, and WebKit should also filter HTTP in addition to HTTPS.
Has this changed in all OS versions that we will be shipping this code on, or only some of them?
Per Arne Vollan
Comment 7
2022-05-09 09:25:51 PDT
(In reply to Alexey Proskuryakov from
comment #6
)
> Comment on
attachment 458969
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=458969&action=review
> > > Source/WebCore/ChangeLog:10 > > + has taken care of this. This appears to have changed now, and WebKit should also filter HTTP in addition to HTTPS. > > Has this changed in all OS versions that we will be shipping this code on, > or only some of them?
That is a good point! It appears that it has only changed in the most recent public macOS version. I can look into creating an ENABLE macro for this. Thanks for reviewing!
Per Arne Vollan
Comment 8
2022-05-09 09:44:16 PDT
Reopening to attach new patch.
Per Arne Vollan
Comment 9
2022-05-09 09:44:17 PDT
Created
attachment 459052
[details]
Patch
Per Arne Vollan
Comment 10
2022-05-09 10:02:26 PDT
Created
attachment 459054
[details]
Patch
Per Arne Vollan
Comment 11
2022-05-09 12:55:15 PDT
Comment on
attachment 459054
[details]
Patch Thanks for reviewing!
EWS
Comment 12
2022-05-09 14:19:11 PDT
Committed
r293990
(
250427@main
): <
https://commits.webkit.org/250427@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459054
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug