[macOS] HTTP traffic is not filtered in the parental controls filter https://bugs.webkit.org/show_bug.cgi?id=240180 <rdar://problem/92875540>

Reviewed by Geoffrey Garen.

Traditionally, we have not filtered HTTP in the parental controls filter on macOS, since other parts of the system
has taken care of this. This appears to have changed now, and WebKit should also filter HTTP in addition to HTTPS.

* platform/cocoa/ParentalControlsContentFilter.mm:
(WebCore::canHandleResponse):

Canonical link: https://commits.webkit.org/250376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293929 268f45cc-cd09-0410-ab3c-d52691b4dbfc