Source/WebCore/platform/cocoa/ParentalControlsContentFilter.mm
@@ -74,11 +74,7 @@ UniqueRef<ParentalControlsContentFilter> ParentalControlsContentFilter::create()
 
 static inline bool canHandleResponse(const ResourceResponse& response)
 {
-#if PLATFORM(MAC) || PLATFORM(MACCATALYST)
-    return response.url().protocolIs("https");
-#else
     return response.url().protocolIsInHTTPFamily();
-#endif
 }
 
 void ParentalControlsContentFilter::responseReceived(const ResourceResponse& response)
